style.css
body {
    height: 250vh;
    margin: 0 auto;
    font-family: 'Lora', serif;
    background-image: url(trianglify.png);
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
h3 {
    left: 50%;
    top: 5%;
    transform: translate(-50%, -50%);
    font-size: 24px;
    font-family: 'Montserrat', sans-serif;
    border-bottom: 5px solid black;
    padding-bottom: 5px;
    position: fixed;
}
.img1 {
    margin-top: 25%;
    height: auto;
    position: relative;
    top: 10px;
    max-width: 100%;
    z-index: 1;
}
.img2 { 
    height: auto;
    max-width: 100%;
    position: relative;
    z-index: 1;
    top: 5px;
}
.titlesection {
    background-color: rgb(255, 246, 218);
    z-index: 3;
    height: auto;
    position: relative;
    top: 5px;
    padding: 10px 0px;
}
.titlesection h4:nth-child(1),.aboutsection h4:nth-child(1),
.contactsection h4:nth-child(1) {
    font-family: 'Montserrat', sans-serif;
}
.aboutsection {
    background-color: rgb(255, 185, 93);
    z-index: 3;
    position: relative;
    padding: 10px 0px;
}
.projectwrapper {
    /* z-index: 3; */
    display: flex;
    justify-content: space-evenly;
    flex-flow: wrap;
    height: 500px;
    position: relative;
    background-color: #ffffff;
    padding: 10px;
}

.projectwrapper .img3,.projectwrapper .img4,.projectwrapper .img5,.projectwrapper .img6,.projectwrapper .img7, .projectwrapper .img8 {
    height: auto;
    max-height: 100%;
    width: 200px;
    max-width: 45%;
    background-color: lightgrey;
    margin: 2px;
    box-shadow: 0px 0px 2px 0px
}
.projectwrapper .img3:hover,.projectwrapper .img6:hover {
    z-index: 5;
    max-width:100%;
    transform: scale(1.5);
    transform-origin: left 2%;
}
.projectwrapper .img5:hover,.projectwrapper .img8:hover {
    z-index: 5;
    max-width:100%;
    transform: scale(1.5);
    transform-origin: right 2%;
}
.projectwrapper .img4:hover {
        z-index: 5;
        max-width:100%;
        transform: scale(1.95);
        transform-origin: top 2%;
}
.projectwrapper .img7:hover {
    z-index: 5;
    max-width:100%;
    transform: scale(1.95);
}
.contactsection {
    background-color: rgb(255, 160, 35);
    z-index: 3;
    position: relative;
    padding: 30px 0px;
    text-align: center;
}
.contactsection a {
    font-family: 'Montserrat', sans-serif;
    width: max-content;
    position: relative;
    font-weight: bold;
    text-decoration: none;
    color: black;
}
.contactsection a:hover {
    color: white;
}
@media only screen and (min-width:750px) {
    body {
        height: 300vh;
        margin: 0 auto;
    }
    .projectwrapper {
        /* z-index: 3; */
        display: flex;
        margin-left:auto;
        margin-right:auto;
        justify-content: space-evenly;
        flex-flow: wrap;
        width: 100%;
        height: 500px;
    }
    .projectwrapper .img3,.projectwrapper .img4,.projectwrapper .img5,.projectwrapper .img6,.projectwrapper .img7, .projectwrapper .img8 {
        height: auto;
        max-height: 50%;
        width: 33%;
        max-width: 45%;
        background-color: lightgrey;
        margin: 1px;
    }
}

